...
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lista de publicaciones" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPostsResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

    </LinearLayout>

...
